--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
                     <option value="international" data-en="International" data-fr="International" data-zh="国际">International</option>
                 </select>
 
-                <label for="countryOfResidence" data-en="Country of Residence:" data-fr="Pays de résidence:" data-zh="居住国家：">Country of Residence:</label>
+                <label for="countryOfResidence" data-en="Country of Residence:" data-fr="Pays de résidence:" data-zh="居住地：">Country of Residence:</label>
                 <select id="countryOfResidence" name="countryOfResidence" required>
                     <option value="China" data-en="China" data-fr="Chine" data-zh="中国">China</option>
                     <option value="Canada" data-en="Canada" data-fr="Canada" data-zh="加拿大">Canada</option>
-                    <option value="HongKongSAR" data-en="Hong Kong SAR" data-fr="Hong Kong SAR" data-zh="香港特别行政区">HongKongSAR</option>
+                    <option value="Hong Kong SAR" data-en="Hong Kong SAR" data-fr="Hong Kong SAR" data-zh="香港特别行政区">Hong Kong SAR</option>
                     <option value="USA" data-en="United States" data-fr="États-Unis" data-zh="美国">USA</option>
                     <option value="UK" data-en="United Kingdom" data-fr="Royaume-Uni" data-zh="英国">UK</option>
                     <option value="Australia" data-en="Australia" data-fr="Australie" data-zh="澳大利亚">Australia</option>
@@ -211,13 +211,11 @@
                     <!-- Add more countries as needed -->
                 </select>
 
-                <label for="countryOfCitizenship" data-en="Country of Citizenship:" data-fr="Pays de citoyenneté:" data-zh="所持有护照：">Country of Citizenship:</label>
+                <label for="countryOfCitizenship" data-en="Current Passport:" data-fr="Passeport Actuel:" data-zh="所持有护照：">Country of Citizenship:</label>
          <select id="countryOfCitizenship" name="countryOfCitizenship" required>
-                    <option value="China" data-en="Chinese Passport" data-fr="Passeport chinois" data-zh="中国护照">China</option>
+                    <option value="China" data-en="China" data-fr="Chine" data-zh="中国">China</option>
                     <option value="Canada" data-en="Canada" data-fr="Canada" data-zh="加拿大">Canada</option>
-                    <option value="HongKongSAR" data-en="Hong Kong SAR Passport" data-fr="Passeport de la RAS Hong Kong" data-zh="香港特别行政区护照">HongKongSAR</option>
-                    <option value="MacauSAR" data-en="Macau SAR" data-fr="Macau SAR" data-zh="澳门特别行政区护照">MacauSAR</option>
-                    <option value="Taiwan" data-en="Taiwan passport" data-fr="Passeport taïwanais" data-zh="台湾护照">Taiwan</option>
+                    <option value="Hong Kong SAR" data-en="Hong Kong SAR" data-fr="RAS Hong Kong" data-zh="香港特别行政区">Hong Kong SAR</option>
                     <option value="USA" data-en="United States" data-fr="États-Unis" data-zh="美国">USA</option>
                     <option value="UK" data-en="United Kingdom" data-fr="Royaume-Uni" data-zh="英国">UK</option>
                     <option value="Australia" data-en="Australia" data-fr="Australie" data-zh="澳大利亚">Australia</option>
@@ -236,9 +234,6 @@
                     <option value="nonBinary" data-en="Non-binary" data-fr="Non binaire" data-zh="非二元性别">Non-binary</option>
                     <option value="preferNotToSay" data-en="Prefer not to say" data-fr="Préfère ne pas dire" data-zh="不愿透露">Prefer not to say</option>
                 </select>
-
-                <label for="age" data-en="Age:" data-fr="Âge:" data-zh="年龄：">Age:</label>
-                <input type="number" id="age" name="age" required>
 
                 <label for="submissionDate" data-en="Submission Date:" data-fr="Date de soumission:" data-zh="提交日期：">Submission Date:</label>
                 <input type="date" id="submissionDate" name="submissionDate" required>
